--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 <body>
   <!-- Top nav bar (fixed) -->
   <nav>
-    <span id="logo">tweeter</span>
+    <span class="logo">tweeter</span>
     <div class="write-tweet">
     <span class="new-tweet">Write a new tweet</span>
     <i class="fa-solid fa-angles-down"></i>
