Add and style header

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -39,9 +40,20 @@
     <span class="logo">tweeter</span>
     <div class="write-tweet">
     <span class="new-tweet">Write a new tweet</span>
-    <i class="fa-solid fa-angles-down"></i>
+    <i class="fa-solid fa-angles-down" style="color: #eb0a0a;"></i>
   </div>
   </nav>
+
+  <!-- -->
+  <header>
+    <div>
+        <img src="/images/profile-hex.png"> 
+    </div>
+    <br>
+    <div>
+        <h2>Lily</h2>
+    </div>
+</header>
 
   <!-- Page-specific (main) content here -->
   <main class="container"></main>
