Registered an event handler to update  the character count when typing in textarea

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
+  <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 </head>
 
 <body>
@@ -63,10 +64,10 @@
       <form method="POST" action="/tweets/">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text"></textarea>
-        <div>
+        <footer>
           <button type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
+        </footer>
       </form>
     </section>
   </main>
