--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <!-- Meta Information -->
   <title>Tweeter - Home Page</title>
   <!-- font awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- External CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -25,8 +27,9 @@
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/header.css" type="text/css"/>
-  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css"/>
+  <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -41,21 +44,21 @@
   <nav>
     <span class="logo">tweeter</span>
     <div class="write-tweet">
-    <span class="new-tweet">Write a new tweet</span>
-    <i class="fa-solid fa-angles-down" style="color: #eb0a0a;"></i>
-  </div>
+      <span class="new-tweet">Write a new tweet</span>
+      <i class="fa-solid fa-angles-down" style="color: #eb0a0a;"></i>
+    </div>
   </nav>
 
-  <!-- -->
+  <!-- profile -->
   <header>
     <div>
-        <img src="/images/profile-hex.png"> 
+      <img src="/images/profile-hex.png">
     </div>
     <br>
     <div>
-        <h2>Lily</h2>
+      <h2>Lily</h2>
     </div>
-</header>
+  </header>
 
   <!-- Page-specific (main) content here -->
   <main class="container">
@@ -71,6 +74,23 @@
       </form>
     </section>
   </main>
+
+  <!-- posted tweet -->
+  <article>
+    <header>
+      <h3>Someone</h3>
+    </header>
+    <p>The more I read, the less I know</p>
+    <footer>
+      <!-- date posted and icons -->
+      <output name="sincePost" class="sincePost">10 days</output>
+        <div class="icons">
+        <i class="fa-solid fa-flag"></i>
+        <i class="fa-solid fa-retweet"></i>
+        <i class="fa-solid fa-heart"></i>
+        </div>
+    </footer>
+  </article>
 </body>
 
 </html>
