Remove hardcoded tweet.

--- a/public/index.html
+++ b/public/index.html
@@ -76,17 +76,10 @@
   </main>
 
   <!-- posted tweet -->
-  <article>
-    <footer>
-      <!-- date posted and icons -->
-      <output name="sincePost" class="sincePost">10 days</output>
-        <div class="icons">
-        <i class="fa-solid fa-flag"></i>
-        <i class="fa-solid fa-retweet"></i>
-        <i class="fa-solid fa-heart"></i>
-        </div>
-    </footer>
-  </article>
+  <div class="tweet-container">
+
+    <script src="client.js"></script>
+  </div>
 </body>
 
 </html>
