Minor changes in client.js

--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,7 @@
   </main>
 
   <!-- posted tweet -->
-  <div class="tweet-container">
-
+  <section class="tweets"> 
     <script src="client.js"></script>
   </div>
 </body>
