Replace .alert error messages with jquery .text and styling.

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
       <form method="POST" action="/tweets/">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text"></textarea>
+        <span class="error-message"></span>
         <footer>
           <button type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
