Restyle tweets and header. Add hover effects.

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <!-- Meta Information -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Tweeter - Home Page</title>
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -49,7 +52,7 @@
     <span class="logo">tweeter</span>
     <div class="write-tweet">
       <span class="new-tweet">Write a new tweet</span>
-      <i class="fa-solid fa-angles-down" style="color: #eb0a0a;"></i>
+      <i class="fa-solid fa-angles-down" style="color: blue;"></i>
     </div>
   </nav>
 
@@ -60,7 +63,7 @@
     </div>
     <br>
     <div>
-      <h2>Lily</h2>
+      <h2>@Lily</h2>
     </div>
   </header>
 
@@ -68,7 +71,7 @@
   <main class="container">
     <section class="new-tweet">
       <form class="tweet-form" method="POST" action="/tweets">
-        <label for="tweet-text">What are you humming about?</label>
+        <label for="tweet-text">What are you thinking about?</label>
         <textarea class="tweetform" name="text" id="tweet-text" rows="1"></textarea>
         <span class="error-message"></span>
         <footer>
