Adjust styling in layout.css

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,6 @@
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
@@ -72,7 +71,7 @@
     <section class="new-tweet">
       <form class="tweet-form" method="POST" action="/tweets">
         <label for="tweet-text">What are you thinking about?</label>
-        <textarea class="tweetform" name="text" id="tweet-text" rows="1"></textarea>
+        <textarea class="tweetform" name="text" id="tweet-text"></textarea>
         <span class="error-message"></span>
         <footer>
           <button type="submit">Tweet</button>
@@ -80,10 +79,10 @@
         </footer>
       </form>
     </section>
-  </main>
   <!-- posted tweet -->
-  <section class="tweets">
+  <section class="tweets-container">
   </section>
+</main>
 </body>
 
 </html>
